syntax = "proto3";
package subnet_dpn.user_balance;

message ProtoUserBalance {
  string user_addr = 1;
  int64 balance = 2;
}


message ProtoRefreshBalances {
}

message ProtoBalanceChange {
  oneof payload {
    ProtoUserBalance user_balance = 1;
    ProtoRefreshBalances refresh_balances = 2;
  }
}